--- a/index.html
+++ b/index.html
@@ -2,21 +2,41 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>Code Library</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css">
+  <link rel="stylesheet" href="./docs/assets/themes/vue.css" />
 </head>
 <body>
+  <nav>
+    <a href="/">Go Blog Home</a>
+  </nav>
   <div id="app"></div>
   <script>
     window.$docsify = {
-      name: '',
-      repo: ''
-    }
+      name: "Code Library",
+      repo: "https://github.com/GodGc/code-library",
+      maxLevel: 3,
+      subMaxLevel: 2,
+      relativePath: true,
+      loadSidebar: true,
+      autoHeader: true,
+      search: {
+        paths: "auto",
+        placeholder: {
+          "/zh-cn/": "搜索",
+          "/": "Type to search"
+        },
+        noData: '找不到结果',
+        depth: 3,
+      }
+    };
   </script>
-  <!-- Docsify v4 -->
-  <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
+  <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
+  <script src="//unpkg.com/docsify-copy-code"></script>
+  <script src="//unpkg.com/docsify-pagination/dist/docsify-pagination.min.js"></script>
+  <script src="//unpkg.com/docsify/lib/plugins/search.min.js"></script>
+  <script src="//unpkg.com/docsify/lib/plugins/zoom-image.min.js"></script>
 </body>
 </html>
